Trying to fix alignment <600px

--- a/components/project-puff.module.css
+++ b/components/project-puff.module.css
@@ -2,7 +2,6 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 100%;
 }
 .puff {
   width: 100%;
@@ -34,7 +33,6 @@
   .container {
     flex-direction: column;
     margin: 5px;
-    width: 95%;
   }
   .puff,
   .puff:hover {
